<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="auto_select_device" translatable="false">auto_select_device</string>

    <string name="app_name">EasyLock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_settings">Settings</string>
    <string name="toolbox_connect">Connect</string>
    <string name="toolbox_disconnect">Disconnect</string>

    <string name="text_password">Password:</string>
    <string name="text_new_password">New password:</string>
    <string name="text_change">Change password</string>
    <string name="text_password_hint">Password</string>
    <string name="text_new_password_hint">New Password for the selected device</string>

    <string name="bluetooth_permission_denied">Congratulations. You made this App useless</string>

    <string name="bluetooth_messages_1">Bluetooth has to be activated for this app to work</string>
    <string name="bluetooth_messages_2">You still need Bluetooth for this app to function</string>
    <string name="bluetooth_messages_3">I just told you twice that you need Bluetooth</string>
    <string name="bluetooth_messages_4">Hey, a Bluetooth Lock doesn\'t work without Bluetooth</string>
    <string name="bluetooth_messages_5">What are you doing? Without Bluetooth nothing works in this app</string>
    <string name="bluetooth_messages_6">Did I mention that Bluetooth is required?</string>
    <string name="bluetooth_messages_7">If you don\'t want to use Bluetooth then take a cable and shove it up your ass </string>
    <string name="bluetooth_messages_8">Whatever god you believe in, he is disappointed</string>
    <string name="bluetooth_messages_9">Are you 6, 60, or mother\'s disappointment?</string>
    <string name="bluetooth_messages_10">Roses are red, violets are blue, I\'ve got 5 fingers, the middle one is for you</string>
    <string name="bluetooth_messages_11">*intense crying*</string>

    <string name="bluetooth_permission_message">No permission for the use of Bluetooth found</string>

    <string name="bluetooth_device_message">No Bluetooth device selected</string>
    <string name="bluetooth_not_connected">No Bluetooth device connected</string>

    <string name="connected">Connected with</string>
    <string name="not_connected_1">Connection with</string>
    <string name="not_connected_2">not possible</string>

    <string name="error_data">Error. Too much data sent</string>
    <string name="pw_too_long">Password is too long. A maximum of 127 characters is allowed</string>
    <string name="new_pw_too_long">New password is too long. A maximum of 127 characters is allowed</string>
    <string name="wrong_password">Wrong password</string>
    <string name="device_disconnected">The Bluetooth connection was interrupted</string>
    <string name="password_changed">Password changed</string>
    <string name="inactivity">Activity was canceled due to inactivity</string>


    <!-- Configuration -->
    <string name="start_configuration">Start configuration</string>
    <string name="configuration_message_1">Please close the door</string>
    <string name="configuration_message_2">Please open the door now</string>
    <string name="continue_config">Continue</string>
    <string name="finish_config">Finish</string>
    <string name="config_complete">Configuration complete</string>

    <!-- Preference Titles -->
    <string name="settings_title_device">Device</string>
    <string name="settings_title_start">Start</string>

    <!-- Device Preferences -->
    <string name="settings_device_change_password">Change password</string>
    <string name="settings_device_config_device">Configure Open-Close Detection</string>

    <!-- Start Preferences -->
    <string name="settings_start_automatic_device">Device selection after start</string>
    <string name="settings_start_specific_bluetooth_device">Standard device</string>
    <string name="settings_start_last_device">The last chosen device</string>
    <string name="settings_start_specific_device">A specific device</string>
    <string name="settings_start_automatic_connection">Automatic connection</string>
    <string name="settings_start_automatic_connection_on">App connects automatically to the device</string>
    <string name="settings_start_automatic_connection_off">Nothing happens</string>

</resources>