<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="?android:attr/colorBackground"
    android:gravity="center"
    app:layout_scrollFlags="snapMargins">

    <EditText
        android:id="@+id/text_password_changepw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="?attr/actionMenuTextColor"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/text_new_password_changepw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_password_changepw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="?attr/actionMenuTextColor"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_password_changepw"
        android:layout_alignTop="@+id/text_password_changepw"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-39dp"
        android:text="@string/text_password"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_new_password_changepw"
        android:layout_alignTop="@+id/text_new_password_changepw"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-38dp"
        android:text="@string/text_new_password"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changepw"
        android:layout_width="219dp"
        android:layout_height="76dp"
        android:layout_below="@+id/text_new_password_changepw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/text_change"
        android:textSize="20sp" />

</RelativeLayout>